Sun Feb  7 22:10:08 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* common.mk: Added two more precondition files for enc/unicode/casefold.h

	* enc/unicode.c: Added shortening macros for enc/unicode/casefold.h

	* enc/unicode/case-folding.rb: Fixed file encoding for CaseFolding.txt
	  to ASCII-8BIT (should fix some ci errors). Clarified usage. Created
	  class MapItem. Partially implemented class CaseMapping.
	(with Kimihito Matsui)

Sun Feb  7 14:12:32 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb: Fixing parameter passing.
	(with Kimihito Matsui)

Sun Feb  7 11:44:03 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb: New classes CaseMapping/CaseMappingDummy
	  to pass as parameters; not yet implemented or used.
	(with Kimihito Matsui)


Sun Feb  7 11:16:00 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* common.mk: using new option in recipe for enc/unicode/casefold.h

	* enc/unicode/case-folding.rb: Correctly specify argument to new option.
	(with Kimihito Matsui)

Sun Feb  7 10:43:27 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	(this commit message applies to the previous commit)
	* common.mk: explicit recipe for enc/unicode/casefold.h

	* enc/unicode/case-folding.rb: Adding -m option to prepare for using
	  multiple data files.
	(with Kimihito Matsui)

Sat Feb  6 22:30:57 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/cgi/util.rb (escapeHTML, unescapeHTML): consider
	  ASCII-incompatible encodings.  [Fix GH-1239]

Sat Feb  6 15:18:28 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_regex_casefold.rb: Added data-based testing for
	  String#downcase :fold.

	* enc/unicode.c: Fixed a range error (lowest non-ASCII character affected
	  by case operations is U+00B5, MICRO SIGN)

	* test/ruby/enc/test_case_mapping.rb: Explicit test for case folding of
	  MICRO SIGN to Greek mu.
	(with Kimihito Matsui)

Sat Feb  6 14:51:23 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
